traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:41: error: not found: value cpt
  cpt += 1
  ^TraversalByColumn:42: error: not found: value cpt
  ecritMessage(cpt)
               ^